k8s/overlays/production/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gh-deck
spec:
  template:
    spec:
      containers:
      - name: rails
        image: ${GH_DECK_IMAGE}
