k8s/overlays/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gh-deck
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
spec:
  rules:
  - host: gh-deck.net
    http:
      paths:
      - backend:
          serviceName: gh-deck
          servicePort: 80
  tls:
  - secretName: gh-deck-tls
    hosts:
    - gh-deck.net
